prevent jump to top on nav open

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -24,7 +24,7 @@ body {
 
   &::-webkit-scrollbar {
     background-color: $color-background-light;
-    width: 3px;
+    width: $scrollbar-width;
   }
 
   &::-webkit-scrollbar-thumb {
