--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,6 +10,7 @@ $color-highlight-text: #272727;
 // layout
 $nav-mobile-height: 75px;
 $nav-desktop-width: 95px;
+$scrollbar-width: 3px;
 
 // design
 $design-border-radius-default: 3px;
